# Indicadores_siops

./: pyproject.toml  table_schemas.sql
Indicadores_N_NE/src/Analise Estadual/: Analise_estadual.py  analise_grafica_N_NE.py  plots.py
Indicadores_N_NE/src/Analise Estadual/outputs_N_NE/: Indicador Capacidade - IDH.csv  Indicador Capacidade - Porte.csv  Indicador Dependencia - IDH.csv  Indicador Dependencia Sus - IDH.csv  Indicador Dependencia Sus - Porte.csv  Receita Total - IDH.csv  Receita Total - Nordeste.csv  Receita Total - Norte.csv  Receita Total - Porte.csv  Receita Total per capita - IDH.csv  Receita Total per capita - Porte.csv  Receita líquida de impostos - IDH.csv  Receita líquida de impostos - Porte.csv  Receita líquida de impostos das Regiões Norte_Nordeste.csv
Indicadores_N_NE/src/Analise Regional/: analise_regiões.py
indicadores_siops/: Indice de Dependência Municipal.py  database.py
indicadores_siops/Analise Grafica/: .~lock.Inidicadores_subregião.csv#  Analise_final.py.ipynb  IPCA.csv  Indicador_Região.csv  Inidicadores_subregião.csv  database.py
indicadores_siops/Analise Grafica/.ipynb_checkpoints/: Analise_final.py-checkpoint.ipynb
indicadores_siops/Indices Regiões Saúde/: Agregação.csv
tests/: test_indicadores_siops.py
