[tool.poetry]
name = "Indicadores_siops"
version = "0.1.0"
description = ""
homepage = "https://github.com/LuizAlexandre21/Indicadores_siops"
repository = "https://github.com/LuizAlexandre21/Indicadores_siops"
authors = ["Luiz Alexandre <luizalexandre21@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
peewee = "^3.14.4"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

